@@ -1,5 +1,6 @@
 == master
 
+* Add the ability to skip automatically initializing state machines on #initialize
 * Add #{name}_paths for walking the available paths in a state machine
 * Add Mongoid 2.0.0+ support
 * Use around hooks to improve compatibility with other libraries in ActiveModel / ActiveRecord / MongoMapper integrations
